# greedysnake

./: .gitignore  CMakeLists.txt  README.md  snak.c
